deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: web-deployment
spec:
    replicas: 3
    selector:
       matchLabels:
          app: web-csharp-app
    template:
       metadata:
          labels:
             app: web-csharp-app
       spec:
          containers:
          - name: web-app
            image: web-app:v1
            ports:
              - name: web
                containerPort: 80
            livenessProbe:
              httpGet:
                port: 80
                path: / 
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 80
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
