service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web-csharp-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
  type: NodePort
