ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-example
spec:
  rules:
  - host: arch.homework
    http:
      paths:    
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 8000
